# block_sorting

./: CMakeLists.txt  README.md  package.xml  rosinstall  setup.py
config/: bin_metadata.yaml  block_pattern.yaml
scripts/: run_demo.py
src/block_sorting/: __init__.py  block_utils.py  perception_simulator.py
